# epub2txt

./: .gitignore  Cargo.toml  config.toml
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  process.rs  utils.rs
src/process/: chapter.rs  metadata.rs  opf.rs
