[package]
name = "epub2txt"
version = "0.2.0"
edition = "2024"

[dependencies]
zip = "6.0.0"
rayon = "1.7"
ahash = "0.8"
anyhow = "1.0.71"
toml_edit = "0.23"
lazy_static = "1.4"

[dependencies.phf]
version = "0.13"
features = ["macros"]

[dependencies.config]
version = "0.15"
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.quick-xml]
version = "0.38"
features = ["serialize"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
